--- a/register.html
+++ b/register.html
@@ -47,7 +47,7 @@
   <!-- end scripts -->
 
 </head>
-<body class="signin">
+<body class="register">
 	<!-- The Stretchy Background Image -->
 	<div id="background-image">
 		<img class="source-image" src="images/bkgd_1.jpg" >
@@ -66,25 +66,16 @@
 		</div>
   </header>
   <div role="main" id="main" class="clearfix">
-		<div id="signin" class="titled-box clearfix">
-			<h1 class="box-title"><span>WELCOME TO myARCHSTONE</span></h1>
+		<div id="register" class="titled-box clearfix">
+			<h1 class="box-title"><span>DON'T HAVE AN ACCOUNT?</span></h1>
 			<div class="box-shadow-left"> &nbsp; </div><div class="box-shadow-right"> &nbsp; </div>
-			<div class="body1">
-				<p>With exclusive access to our resident-only web sites, hop on any computer with Internet access to:</p>
-				<ul>
-					<li>Pay your rent online</li>
-					<li>Submit and track service requests</li>
-					<li>Find community forms and policies</li>
-					<li>And much, much more...</li>
-				</ul>
-				<p>Log in now to get started!</p>
-			</div>
-			<div class="body2">
+			<div class="body">
 				<form action="POST" method="index.html">
-					<h3>Please Sign In</h3>
-					<p class="error"> &nbsp;Whoops! We didn’t recognize your username or password. </p>
-					<p><input type="email" class="autoclear" name="email" id="email"></p>
-					<p><input type="password" class="autoclear" name="password" id="password"></p>
+					<h3>Please fill out the following information and we'll send you an email to activate your account</h3>
+					<p class="error"> &nbsp; </p>
+					<p><input type="text" class="autoclear" name="email" id="email" value="Email Address"></p>
+					<p><input type="text" class="autoclear" name="community" id="community" value="Your Community"></p>
+					<p><input type="text" class="autoclear" name="address" id="address" value="Your Address"></p>
 					<div class="submit-area-right">
 						<button type="submit" class="submit"><span>Sign In</span><span class="end"> &nbsp; </span></button>
 					</div>
@@ -94,20 +85,6 @@
 						<p><a href="#">Forgot password?</a></p>
 					</div>
 				</form>
-			</div>
-			<p class="box-footer"><span></span></p>
-		</div>
-		
-		<div class="photo-box clearfix">
-			<p><strong>OPTIONAL</strong><br/>MARKETING<br/>REAL<br/>ESTATE</p>
-			<img src="images/puppy.png">
-		</div>
-		
-		<div class="titled-box clearfix small-box titled-box-right">
-			<h1 class="box-title"><span>myARCHSTONE MOBILE</span></h1>
-			<div class="body clearfix">
-				<a href="#" class="button-droid"> &nbsp; </a>
-				<a href="#" class="button-iphone"> &nbsp; </a>
 			</div>
 			<p class="box-footer"><span></span></p>
 		</div>
