--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 				<form action="POST" method="index.html">
 					<h3>Please Sign In</h3>
 					<p class="error"> &nbsp;Whoops! We didn’t recognize your username or password. </p>
-					<p><input type="email" class="autoclear" name="email" id="email"></p>
-					<p><input type="password" class="autoclear" name="password" id="password"></p>
+					<p><input type="text" class="autoclear" name="email" id="email" value="Email Address"></p>
+					<p><input type="password" class="autoclear" name="password" id="password" value="password"></p>
 					<div class="submit-area-right">
 						<button type="submit" class="submit"><span>Sign In</span><span class="end"> &nbsp; </span></button>
 					</div>
