--- a/request-history.html
+++ b/request-history.html
@@ -62,11 +62,27 @@
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header>
-		<div class="header-contents">
+		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
-			<ul>
+			<ul class="primary-nav">
 				<li><a href="request-history.html" title="Contact Archstone">Request History</a></li>
 				<li><a href="service-request.html" title="Contact Archstone">Service Request</a></li>				<li><a href="#" class="bookmark" title="Bookmark this page">Bookmark</a></li>
+				<li class="half-pint">
+					<a href="#">Genevieve Cornhill</a>
+					<ul>
+						<li><a href="#">Switch to Different Lease</a></li>
+						<li><a href="#">Contact Information</a></li>
+						<li><a href="#">Settings</a></li>
+						<li><a href="#">Sign Out</a></li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+		<div class="secondary-nav-contents">
+			<ul class="secondary-nav">
+				<li><a href="#">Team</a></li>
+				<li><a href="#">Amenities</a></li>
+				<li><a href="#">Forms &amp; Policies</a></li>
 			</ul>
 		</div>
   </header>
@@ -116,7 +132,7 @@
 					<span class="request">Garbage Disposal</span>
 					<span class="description">Its getting clogged again. Getting stuck with the most...</span>
 					<span class="status">In Progress</span>
-					<a href="#" class="email"> &nbsp; </a>
+					<a href="#" class="email" title="Contact Archstone"> &nbsp; </a>
 				</h2>
 				<div>
 					<div class="description-summary">
@@ -153,7 +169,7 @@
 					<span class="request">Garbage Disposal</span>
 					<span class="description">Its getting clogged again. Getting stuck with the most...</span>
 					<span class="status">In Progress</span>
-					<a href="#" class="email"> &nbsp; </a>
+					<a href="#" class="email" title="Contact Archstone"> &nbsp; </a>
 				</h2>
 				<div>
 					<div class="description-summary">
@@ -190,7 +206,7 @@
 					<span class="request">Garbage Disposal</span>
 					<span class="description">Its getting clogged again. Getting stuck with the most...</span>
 					<span class="status">In Progress</span>
-					<a href="#" class="email"> &nbsp; </a>
+					<a href="#" class="email" title="Contact Archstone"> &nbsp; </a>
 				</h2>
 				<div>
 					<div class="description-summary">
@@ -227,7 +243,7 @@
 					<span class="request">Garbage Disposal</span>
 					<span class="description">Its getting clogged again. Getting stuck with the most...</span>
 					<span class="status">In Progress</span>
-					<a href="#" class="email"> &nbsp; </a>
+					<a href="#" class="email" title="Contact Archstone"> &nbsp; </a>
 				</h2>
 				<div>
 					<div class="description-summary">
