--- a/register.html
+++ b/register.html
@@ -57,11 +57,18 @@
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header>
-		<div class="header-contents">
+		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
-			<ul>
+			<ul class="primary-nav">
 				<li><a href="request-history.html" title="Contact Archstone">Request History</a></li>
 				<li><a href="service-request.html" title="Contact Archstone">Service Request</a></li>				<li><a href="#" class="bookmark" title="Bookmark this page">Bookmark</a></li>
+			</ul>
+		</div>
+		<div class="secondary-nav-contents">
+			<ul class="secondary-nav">
+				<li><a href="#">Team</a></li>
+				<li><a href="#">Amenities</a></li>
+				<li><a href="#">Forms &amp; Policies</a></li>
 			</ul>
 		</div>
   </header>
