--- a/index.html
+++ b/index.html
@@ -59,26 +59,6 @@
   <header>
 		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
-			<ul class="primary-nav">
-				<li><a href="request-history.html" title="Contact Archstone">Request History</a></li>
-				<li><a href="service-request.html" title="Contact Archstone">Service Request</a></li>				<li><a href="#" class="bookmark" title="Bookmark this page">Bookmark</a></li>
-				<li class="half-pint clearfix">
-					<a href="#">Genevieve Cornhill</a>
-					<ul class="clearfix">
-						<li><a href="#">Switch to Different Lease</a></li>
-						<li><a href="#">Contact Information</a></li>
-						<li><a href="#">Settings</a></li>
-						<li><a href="#">Sign Out</a></li>
-					</ul>
-				</li>
-			</ul>
-		</div>
-		<div class="secondary-nav-contents">
-			<ul class="secondary-nav">
-				<li><a href="#">Team</a></li>
-				<li><a href="#">Amenities</a></li>
-				<li><a href="#">Forms &amp; Policies</a></li>
-			</ul>
 		</div>
   </header>
   <div role="main" id="main" class="clearfix">
@@ -96,7 +76,7 @@
 				<p>Log in now to get started!</p>
 			</div>
 			<div class="body2">
-				<form action="POST" method="index.html">
+				<form method="POST" action="request-history.html">
 					<h3>Please Sign In</h3>
 					<p class="error"> &nbsp;Whoops! We didn’t recognize your username or password. </p>
 					<p><input type="text" class="autoclear" name="email" id="email" value="Email Address"></p>
