--- a/register.html
+++ b/register.html
@@ -61,7 +61,7 @@
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 			<ul class="primary-nav">
 				<li><a href="request-history.html" title="Contact Archstone">Request History</a></li>
-				<li><a href="service-request.html" title="Contact Archstone">Service Request</a></li>				<li><a href="#" class="bookmark" title="Bookmark this page">Bookmark</a></li>
+				<li><a href="service-request.html" title="Contact Archstone">Service Request</a></li>
 			</ul>
 		</div>
 		<div class="secondary-nav-contents">
