--- a/request-sent.html
+++ b/request-sent.html
@@ -62,13 +62,13 @@
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 			<ul>
 				<li><a href="request-history.html" title="Contact Archstone">Request History</a></li>
-				<li><a href="service-request.html" title="Contact Archstone">Service Request</a></li>				<li><a href="#" class="bookmark" title="Bookmark this page">Bookmark</a></li>
+				<li><a href="service-request.html" title="Contact Archstone">Service Request</a></li>
 			</ul>
 		</div>
   </header>
   <div role="main" id="main" class="clearfix">
 		<div id="request-sent" class="titled-box clearfix">
-			<h1 class="box-title"><span>SERVICE REQUEST SENT</span></h1>
+			<h1 class="box-title"><span>SERVICE REQUEST SENT!</span></h1>
 			<div class="body">
 				<h2>You will receive an email shortly confirming your request.</h2>
 				<p>Thanks for letting us respond to the issue. We'll respond to your request as soon as we can. For service requests concerning your apartment, we promise to respond within 24 hours.</p>
@@ -78,7 +78,7 @@
 					<span>303-555-5555</span><br>
 					<a href="mailto:email@address.com">email@address.com</a>
 				</p>
-				<p><a class="add-button" href="service-request.html">Send another Request</a></p>
+				<p><a class="add-button" href="service-request.html">Make another Request</a></p>
 				<div class="request-summary">
 					<h3 class="request-title">
 						<span class="title">Service Request</span>
