--- a/service-request.html
+++ b/service-request.html
@@ -124,40 +124,7 @@
 				</div>
 				<h2>Common Area</h2>
 				<div>
-					<h3 class="select-element">
-						<span>WHERE IS THE ISSUE?</span>
-						<select name="location" class="location"><option>Select a Common Area</option></select>
-					</h3>
-					<fieldset class="form-element">
-						<h4>What's sWrong?</h4>
-						<div class="form-element-with-notes">
-							<div class="notes">
-								<p>Leaky faucet in the bathroom? Air conditioner not quite right?</p>
-								<p>Describe the issue in detail so we can fix it.</p>
-								<p>(240 characters remaining)</p>
-							</div>
-							
-							<textarea cols="50" rows="5" class="auto-resize"></textarea>
-						</div>
-					</fieldset>
-					<div class="form-element-right">
-						<h4>Do you have pets?</h4>
-						<label><input type="radio" name="pets" value="yes">Yes, I have a pet.</label>
-						<label><input type="radio" name="pets" value="no">No pets here.</label>
-					</div>
-
-					<div class="form-element">
-						<h4>What's Wrong?</h4>
-						<label><input type="radio" name="come_in" value="yes">I give permission to enter my apartment.</label>
-						<label><input type="radio" name="come_in" value="no">I prefer to be home. Please contact me to schedule a time.</label>
-					</div>
-
-					<div class="form-element">
-						<h4>Do you have an alarm?</h4>
-						<label><input type="radio" name="alarm" value="yes">Yes, I have an alarm.</label>
-						<label><input type="radio" name="alarm" value="no">No alarm.</label>
-					</div>					
-					<p class="submit-area"><button type="submit" class="submit"><span>Send Request</span><span class="end"> &nbsp; </span></button></p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin condimentum, dolor ac interdum fringilla, orci justo laoreet augue, vel feugiat nisl velit a nibh. Etiam fringilla hendrerit congue. Nunc eget risus eu velit aliquam suscipit. Proin et tellus id orci luctus pretium. Nulla facilisi. Nunc a odio massa. Donec nec porttitor augue. Ut cursus viverra tortor in scelerisque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nunc pellentesque, felis tincidunt dignissim viverra, dui neque vulputate ante, non iaculis nibh nisi non ligula. Suspendisse nec luctus felis. Donec egestas, turpis at ultrices fermentum, dolor sapien faucibus augue, eu tincidunt massa ante sed libero. Quisque sodales nibh ullamcorper massa pulvinar elementum.</p>
 				</div>
 			</div>
 		</div>
