--- a/request-history.html
+++ b/request-history.html
@@ -62,15 +62,16 @@
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header>
+		<!-- Primary Navigation -->
 		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 			<ul class="primary-nav">
 				<li><a href="request-history.html" title="Contact Archstone">Request History</a></li>
-				<li><a href="service-request.html" title="Contact Archstone">Service Request</a></li>				<li><a href="#" class="bookmark" title="Bookmark this page">Bookmark</a></li>
+				<li><a href="service-request.html" title="Contact Archstone">Service Request</a></li>
 				<li class="half-pint">
 					<a href="#">Genevieve Cornhill</a>
 					<ul>
-						<li><a href="#">Switch to Different Lease</a></li>
+						<li><a href="#" class="cta-lease">Switch to Different Lease</a></li>
 						<li><a href="#">Contact Information</a></li>
 						<li><a href="#">Settings</a></li>
 						<li><a href="#">Sign Out</a></li>
@@ -78,6 +79,9 @@
 				</li>
 			</ul>
 		</div>
+		<!-- /Primary Navigation -->
+		
+		<!-- Secondary Navigation -->
 		<div class="secondary-nav-contents">
 			<ul class="secondary-nav">
 				<li><a href="#">Team</a></li>
@@ -85,7 +89,10 @@
 				<li><a href="#">Forms &amp; Policies</a></li>
 			</ul>
 		</div>
+		<!-- /Secondary Navigation -->
   </header>
+
+	<!-- Main Page Wrapper -->
   <div role="main" id="main" class="clearfix">
 		<div id="request-history" class="discreet-accordion-box large-titled-box clearfix">
 			<h1 class="box-title"><span>MY REQUEST HISTORY</span></h1>
@@ -127,12 +134,12 @@
 				</h2>
 			</fieldset>
 			<div class="accordion discreet-accordion">
-				<h2>
+				<h2 rel="000001">
 					<span class="last-updated">4/2/12</span>
 					<span class="request">Garbage Disposal</span>
 					<span class="description">Its getting clogged again. Getting stuck with the most...</span>
 					<span class="status">In Progress</span>
-					<a href="#" class="email" title="Contact Archstone"> &nbsp; </a>
+					<a href="#" class="email cta-email" title="Contact Archstone"> &nbsp; </a>
 				</h2>
 				<div>
 					<div class="description-summary">
@@ -164,12 +171,12 @@
 						<p>Jane Smith</p>
 					</div>
 				</div>
-				<h2>
+				<h2 rel="000002">
 					<span class="last-updated">4/2/12</span>
 					<span class="request">Garbage Disposal</span>
 					<span class="description">Its getting clogged again. Getting stuck with the most...</span>
 					<span class="status">In Progress</span>
-					<a href="#" class="email" title="Contact Archstone"> &nbsp; </a>
+					<a href="#" class="email cta-email" title="Contact Archstone"> &nbsp; </a>
 				</h2>
 				<div>
 					<div class="description-summary">
@@ -201,12 +208,12 @@
 						<p>Jane Smith</p>
 					</div>
 				</div>
-				<h2>
+				<h2 rel="000003">
 					<span class="last-updated">4/2/12</span>
 					<span class="request">Garbage Disposal</span>
 					<span class="description">Its getting clogged again. Getting stuck with the most...</span>
 					<span class="status">In Progress</span>
-					<a href="#" class="email" title="Contact Archstone"> &nbsp; </a>
+					<a href="#" class="email cta-email" title="Contact Archstone"> &nbsp; </a>
 				</h2>
 				<div>
 					<div class="description-summary">
@@ -238,12 +245,12 @@
 						<p>Jane Smith</p>
 					</div>
 				</div>
-				<h2>
+				<h2 rel="000004">
 					<span class="last-updated">4/2/12</span>
 					<span class="request">Garbage Disposal</span>
 					<span class="description">Its getting clogged again. Getting stuck with the most...</span>
 					<span class="status">In Progress</span>
-					<a href="#" class="email" title="Contact Archstone"> &nbsp; </a>
+					<a href="#" class="email cta-email" title="Contact Archstone"> &nbsp; </a>
 				</h2>
 				<div>
 					<div class="description-summary">
@@ -288,23 +295,42 @@
   </footer>
 
 
-	<!-- Hidden Email Dialog -->
-	<div id="mail" class="titled-box">
+	<!-- Hidden Dialogs -->
+	<div id="dialog-email" class="dialog">
 		<form action="index.html" method="POST">
 			<div class="form-element">
-				<label class="form-label">To:</label>
-				<select name="mail-to">
+				<label class="form-label" for="mail-to">To:</label>
+				<select name="mail-to" id="mail-to">
 					<option value="andrew_wyndertyne@archstoneapartments.com">andrew_wyndertyne@archstoneapartments.com</option>
 				</select>
 			</div>
 			<div class="form-element">
-				<label class="form-label">Subject:</label>
-				<input type="text" name="mail-subject">
+				<label class="form-label" for="mail-subject">Subject:</label>
+				<input type="text" name="mail-subject" id="mail-subject">
 			</div>
-			<p><textarea name="mail-body" rows="5" cols="20"></textarea></p>
+			<p><textarea name="mail-body" id="mail-body" rows="5" cols="20"></textarea></p>
 			<p class="submit-area">
 				<button type="submit" class="submit"><span>Send</span><span class="end"> &nbsp; </span></button>
 			</p>
+		</form>
+	</div>
+	<div id="dialog-lease" class="dialog">
+		<form action="index.html" method="POST">
+			<div class="form-element">
+				<input type="radio" value="0" name="location" id="location-0">
+				<label for="location-0">[ Apartment Address ] Customer Name [ Community ]</label>
+			</div>
+
+			<div class="form-element">
+				<input type="radio" value="1" name="location" id="location-1">
+				<label for="location-1">123 Main Street #101, Genvieve Cornhill, Archstone Englewood</label>
+			</div>
+
+			<div class="form-element">
+				<input type="radio" value="2" name="location" id="location-2">
+				<label for="location-2">456 Spruce Street #12, Genevieve Cornhill, Archstone
+			</div>
+
 		</form>
 	</div>
 
