--- a/request-history.html
+++ b/request-history.html
@@ -66,10 +66,10 @@
 		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 			<ul class="primary-nav">
-				<li><a href="#" title="Contact Archstone">Payment</a></li>
+				<li><a href="#" title="Contact Us">Payment</a></li>
 				<li><a href="service-request.html">Service</a></li>
 				<li><a href="#">Information</a></li>
-				<li><a href="#">Lease</a></li>
+				<li><a href="#" class="cta-lease">Lease</a></li>
 				<!-- <li class="half-pint">
 					<a href="#">Genevieve Cornhill</a>
 					<ul>
@@ -88,7 +88,7 @@
 		<div class="secondary-nav-contents">
 			<ul class="secondary-nav">
 				<li><a href="service-request.html">New Request</a></li>
-				<li><a href="request-history.html">Request History</a></li>
+				<li><a href="request-history.html" class="active">Request History</a></li>
 			</ul>
 		</div>
 		<!-- /Secondary Navigation -->
@@ -106,7 +106,7 @@
 						<ul>
 							<li class="year-2010"><a href="#" class="blue">2010</a></li>
 							<li class="year-2011"><a href="#" class="blue-green">2011</a></li>
-							<li class="year-2012"><a href="#" class="green">2012</a></li>
+							<li class="year-2012 active"><a href="#" class="green">2012</a></li>
 						</ul>
 					</div>
 				</div>
@@ -124,7 +124,7 @@
 					</select>
 				</label>
 				<label class="form-element">
-					<span>Show Me</span>
+					<span>Show me</span>
 					<select name="location">
 						<option value="apartment">My Apartment</option>
 						<option value="common">Common Area</option>
@@ -144,8 +144,8 @@
 					<span class="last-updated">4/2/12</span>
 					<span class="request">Garbage Disposal</span>
 					<span class="description">Its getting clogged again. Getting stuck with the most...</span>
-					<span class="status">In Progress</span>
-					<a href="#" class="email cta-email" title="Contact Archstone"> &nbsp; </a>
+					<span class="status">In Process</span>
+					<a href="#" class="email cta-email" title="Contact Us"> &nbsp; </a>
 				</h2>
 				<div>
 					<div class="description-summary">
@@ -181,8 +181,8 @@
 					<span class="last-updated">4/2/12</span>
 					<span class="request">Garbage Disposal</span>
 					<span class="description">Its getting clogged again. Getting stuck with the most...</span>
-					<span class="status">In Progress</span>
-					<a href="#" class="email cta-email" title="Contact Archstone"> &nbsp; </a>
+					<span class="status">In Process</span>
+					<a href="#" class="email cta-email" title="Contact Us"> &nbsp; </a>
 				</h2>
 				<div>
 					<div class="description-summary">
@@ -218,8 +218,8 @@
 					<span class="last-updated">4/2/12</span>
 					<span class="request">Garbage Disposal</span>
 					<span class="description">Its getting clogged again. Getting stuck with the most...</span>
-					<span class="status">In Progress</span>
-					<a href="#" class="email cta-email" title="Contact Archstone"> &nbsp; </a>
+					<span class="status">In Process</span>
+					<a href="#" class="email cta-email" title="Contact Us"> &nbsp; </a>
 				</h2>
 				<div>
 					<div class="description-summary">
@@ -255,8 +255,8 @@
 					<span class="last-updated">4/2/12</span>
 					<span class="request">Garbage Disposal</span>
 					<span class="description">Its getting clogged again. Getting stuck with the most...</span>
-					<span class="status">In Progress</span>
-					<a href="#" class="email cta-email" title="Contact Archstone"> &nbsp; </a>
+					<span class="status">In Process</span>
+					<a href="#" class="email cta-email" title="Contact Us"> &nbsp; </a>
 				</h2>
 				<div>
 					<div class="description-summary">
@@ -345,7 +345,7 @@
   <script>
     var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
     (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+    g.src=('https:'==location.protocol?'https://ssl':'http://www')+'.google-analytics.com/ga.js';
     s.parentNode.insertBefore(g,s)}(document,'script'));
   </script>
 </body>
