--- a/request-history.html
+++ b/request-history.html
@@ -26,6 +26,12 @@
   <link rel="stylesheet" href="css/accordion.css">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
+	<!--[if lt IE 9]>
+	  <link rel="stylesheet" href="css/ie.css">
+	<![endif]-->
+	<!--[if IE 9]>
+	  <link rel="stylesheet" href="css/ie9.css">
+	<![endif]-->
 
 	<!-- Page Specific styles -->
 	<link rel="stylesheet" href="css/date.css"> <!-- Added Styles For All Pages -->
