--- a/service-request.html
+++ b/service-request.html
@@ -26,7 +26,13 @@
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="css/accordion.css">
   <link rel="stylesheet" href="css/jquery.ui.css"> <!-- Added Styles For All Pages -->
-
+	<!--[if lt IE 9]>
+	  <link rel="stylesheet" href="css/ie.css">
+	<![endif]-->
+	<!--[if IE 9]>
+	  <link rel="stylesheet" href="css/ie9.css">
+	<![endif]-->
+	
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
   <!-- All JavaScript at the bottom, except this Modernizr build.
