--- a/request-sent.html
+++ b/request-sent.html
@@ -58,14 +58,37 @@
        chromium.org/developers/how-tos/chrome-frame-getting-started -->
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header>
+		<!-- Primary Navigation -->
 		<div class="primary-nav-contents">
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
-			<ul>
-				<li><a href="request-history.html" title="Contact Us">Request History</a></li>
-				<li><a href="service-request.html" title="Contact Us">Service Request</a></li>
+			<ul class="primary-nav">
+				<li><a href="#" title="Contact Us">Payment</a></li>
+				<li><a href="service-request.html">Service</a></li>
+				<li><a href="#">Information</a></li>
+				<li><a href="#" class="cta-lease">Lease</a></li>
+				<!-- <li class="half-pint">
+					<a href="#">Genevieve Cornhill</a>
+					<ul>
+						<li><a href="#" class="cta-lease">Switch to Different Lease</a></li>
+						<li><a href="#">Contact Information</a></li>
+						<li><a href="#">Settings</a></li>
+						<li><a href="#">Sign Out</a></li>
+					</ul>
+				</li> -->
 			</ul>
 		</div>
+		<!-- /Primary Navigation -->
+		
+		<!-- Secondary Navigation -->
+		<div class="secondary-nav-contents">
+			<ul class="secondary-nav">
+				<li><a href="service-request.html" class="active">New Request</a></li>
+				<li><a href="request-history.html">Request History</a></li>
+			</ul>
+		</div>
+		<!-- /Secondary Navigation -->
   </header>
+
   <div role="main" id="main" class="clearfix">
 		<div id="request-sent" class="titled-box clearfix">
 			<h1 class="box-title"><span>SERVICE REQUEST SENT!</span></h1>
