--- a/request-history.html
+++ b/request-history.html
@@ -74,7 +74,13 @@
 			<a href="index.html" id="logo"><img src="images/logo.png" width="167" height="38" ></a>
 			<ul class="primary-nav">
 				<li><a href="#" title="Contact Us">Payment</a></li>
-				<li><a href="service-request.html">Service</a></li>
+				<li class="active">
+					<a href="service-request.html">Service</a>
+					<ul class="secondary-nav">
+						<li><a href="service-request.html">New Request</a></li>
+						<li><a href="request-history.html" class="active">Request History</a></li>
+					</ul>
+				</li>
 				<li><a href="#">Information</a></li>
 				<li><a href="#" class="cta-lease">Lease</a></li>
 				<!-- <li class="half-pint">
@@ -92,12 +98,12 @@
 		<!-- /Primary Navigation -->
 		
 		<!-- Secondary Navigation -->
-		<div class="secondary-nav-contents">
+		<!-- <div class="secondary-nav-contents">
 			<ul class="secondary-nav">
 				<li><a href="service-request.html">New Request</a></li>
 				<li><a href="request-history.html" class="active">Request History</a></li>
 			</ul>
-		</div>
+		</div> -->
 		<!-- /Secondary Navigation -->
   </header>
 
