--- a/request-history.html
+++ b/request-history.html
@@ -55,6 +55,7 @@
 	<script src="js/browserimage.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/nav.js"></script>
   <script src="js/datemanager.js"></script>
   <!-- end scripts -->
 
@@ -76,14 +77,18 @@
 				<li><a href="#" title="Contact Us">Payment</a></li>
 				<li class="active">
 					<a href="service-request.html">Service</a>
-					<ul class="secondary-nav">
+					<!-- <ul>
 						<li><a href="service-request.html">New Request</a></li>
 						<li><a href="request-history.html" class="active">Request History</a></li>
-					</ul>
+					</ul> -->
 				</li>
 				<li><a href="#">Information</a></li>
 				<li><a href="#" class="cta-lease">Lease</a></li>
-				<!-- <li class="half-pint">
+			</ul>
+		</div>
+		<div class="dropdown-nav-contents">
+			<ul class="dropdown-nav">
+				<li class="half-pint">
 					<a href="#">Genevieve Cornhill</a>
 					<ul>
 						<li><a href="#" class="cta-lease">Switch to Different Lease</a></li>
@@ -91,19 +96,17 @@
 						<li><a href="#">Settings</a></li>
 						<li><a href="#">Sign Out</a></li>
 					</ul>
-				</li> -->
+				</li>
 			</ul>
 		</div>
-
-		<!-- /Primary Navigation -->
 		
 		<!-- Secondary Navigation -->
-		<!-- <div class="secondary-nav-contents">
+		<div class="secondary-nav-contents">
 			<ul class="secondary-nav">
 				<li><a href="service-request.html">New Request</a></li>
 				<li><a href="request-history.html" class="active">Request History</a></li>
 			</ul>
-		</div> -->
+		</div>
 		<!-- /Secondary Navigation -->
   </header>
 
