--- a/request-history.html
+++ b/request-history.html
@@ -89,7 +89,7 @@
 		<div class="dropdown-nav-contents">
 			<ul class="dropdown-nav">
 				<li class="half-pint">
-					<a href="#">Genevieve Cornhill</a>
+					<a href="#"><span class="ui-icon"> &nbsp; </span>Genevieve Cornhill</a>
 					<ul>
 						<li><a href="#" class="cta-lease">Switch to Different Lease</a></li>
 						<li><a href="#">Contact Information</a></li>
